# indonesia-supreme-court-llm-agent

./: .conventionalcommits.json  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.production  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  settings.py
main/cli/: index_court_docs_summary_content.py  local_agent.py
main/http_server/: app.py
qdrant_storage/: meta.json
qdrant_storage/collection/supreme_court_cases/: storage.sqlite
src/: agent.py
utility/: llm.py  logging_config.py  runtime.py
